@@ -26,6 +26,7 @@ dillo-2.1
  - Added a right-click menu to the form submit button (allows to show hiddens).
  - Added the "http_language" dillorc option for setting HTTP's Accept-Language.
  - Refactored prefs.c to a much smaller size!
+ - Fixed a SEGFAULT bug on redirections without Location.
    Patches: place (AKA corvid)
 +- Switched SSL-enabled to configure.in (./configure --enable-ssl).
  - Standardised the installation of dpid/dpidrc with auto* tools.
